# rsu-calculator

./: .gitignore  .pre-commit-config.yaml  LICENSE  main.py  pyproject.toml  requirements.txt
assets/: dummy_transactions.csv
src/: __init__.py  calculator.py  currency.py  exceptions.py  formatter.py  fx_rate_calculator.py  models.py  price_fetcher.py  rsu_calculator.py  rsu_lot.py  schwab_json_parser.py  schwab_transaction_reader.py  validation.py
tests/: schwab_data.json  test_fx_rate_calculator.py  test_price_fetcher.py  test_rsu_calculator.py  test_schwab_csv_parsing.py  test_schwab_parsing.py  test_schwab_transaction_reader.py  test_validation.py
